--- a/index.html
+++ b/index.html
@@ -134,6 +134,290 @@
       </word>
       <br />
       <br />
+
+      <word
+        >this : Tell me why you are the best person for this job.
+        <a href="https://youtu.be/Ij1o5zGDCeE?t=224">listen</a>
+      </word>
+      <br />
+      <br />
+
+      <word
+        >they : Cheap private rentals get filled as soon as they are advertised.
+        <a href="https://youtu.be/DjcZrtcBZi4?t=931">listen</a>
+      </word>
+      <br />
+      <br />
+
+      <word
+        >at : Trade friction might arise between the two nations at any moment.
+        <a href="https://youtu.be/JW8dqT90BLs?t=33">listen</a>
+      </word>
+      <br />
+      <br />
+
+      <word
+        >but : It flowers in spring, but the blossoms are quite small.
+        <a href="https://youtu.be/Ij1o5zGDCeE?t=100">listen</a>
+      </word>
+      <br />
+      <br />
+
+      <word
+        >we : Well, either way, we are always here for you.
+        <a href="https://youtu.be/Ij1o5zGDCeE?t=215">listen</a>
+      </word>
+      <br />
+      <br />
+
+      <word
+        >his : He is a hero, and his legacy will live forever.
+        <a href="https://youtu.be/8i-pNVj5KMw?t=154">listen</a>
+      </word>
+      <br />
+      <br />
+
+      <word
+        >from : Imported chicken feed from China was also found to contain
+        Prozac.
+        <a href="https://youtu.be/JW8dqT90BLs?t=76">listen</a>
+      </word>
+      <br />
+      <br />
+
+      <word
+        >that : We will definitely be going again and requesting that same unit.
+        <a href="https://youtu.be/Ij1o5zGDCeE?t=14">listen</a>
+      </word>
+      <br />
+      <br />
+
+      <word
+        >not : So even ninety percent of those products are absolutely not
+        effective.
+        <a href="https://youtu.be/Ij1o5zGDCeE?t=14">listen</a>
+      </word>
+      <br />
+      <br />
+
+      <word
+        >can't : You can't be capitalist and socialist at the same time.
+        <a href="https://youtu.be/Ij1o5zGDCeE?t=293">listen</a>
+      </word>
+      <br />
+      <br />
+
+      <word
+        >won't : Your brother or sister, won't have a sibling anymore.
+        <a href="https://youtu.be/Zx8uYIfUvh4?t=715">listen</a>
+      </word>
+      <br />
+      <br />
+
+      <word
+        >by : That ship was later destroyed by some kind of energy ribbon.
+        <a href="https://youtu.be/JW8dqT90BLs?t=68">listen</a>
+      </word>
+      <br />
+      <br />
+
+      <word
+        >she : To others she is a yoga teacher who has inspired thousands.
+        <a href="https://youtu.be/2Oe6HUgrRlQ?t=420">listen</a>
+      </word>
+      <br />
+      <br />
+
+      <word
+        >or : Is the fish fresh or frozen?
+        <a href="https://youtu.be/Ij1o5zGDCeE?t=93">listen</a>
+      </word>
+      <br />
+      <br />
+
+      <word
+        >as : Third, there is no such thing as production in general.
+        <a href="https://youtu.be/Ij1o5zGDCeE?t=216">listen</a>
+      </word>
+      <br />
+      <br />
+
+      <word>
+        what : And what I just saw was as urgent as it gets.
+        <a href="https://youtu.be/C-GrRIgdmW8?t=36">listen</a>
+      </word>
+      <br />
+      <br />
+
+      <word>
+        go : In the summer easily go skiing and winter play beach volleyball.
+        <a href="https://youtu.be/Ij1o5zGDCeE?t=90">listen</a>
+      </word>
+      <br />
+      <br />
+
+      <word>
+        their : This will also have a positive impact on their school life.
+        <a href="https://youtu.be/DjcZrtcBZi4?t=573">listen</a>
+      </word>
+      <br />
+      <br />
+
+      <word>
+        can : For example, too much vitamin B can cause nerve pain.
+        <a href="https://youtu.be/Ij1o5zGDCeE?t=100">listen</a>
+      </word>
+      <br />
+      <br />
+
+      <word>
+        who : If not me, who would monitor it? she said.
+        <a href="https://youtu.be/7oUCSfeM9PY?t=396">listen</a>
+      </word>
+      <br />
+      <br />
+
+      <word>
+        get : We'll make tracks as soon as we get things squared.
+        <a href="https://youtu.be/Ij1o5zGDCeE?t=70">listen</a>
+      </word>
+      <br />
+      <br />
+
+      <word>
+        if : Please be patient and contact us if you have any questions.
+        <a href="https://youtu.be/9VF7kffCgJU?t=64">listen</a>
+      </word>
+      <br />
+      <br />
+
+      <word>
+        would : And a quality girl would pick me over you any day.
+        <a href="https://youtu.be/Ij1o5zGDCeE?t=85">listen</a>
+      </word>
+      <br />
+      <br />
+
+      <word>
+        her : If she is miserable the husband cannot afford to neglect her.
+        <a href="https://youtu.be/8HfoKd873HY?t=376">listen</a>
+      </word>
+      <br />
+      <br />
+
+      <word>
+        all : Plus, it has all essential animation and frame drawing tools.
+        <a href="https://youtu.be/JW8dqT90BLs?t=65">listen</a>
+      </word>
+      <br />
+      <br />
+
+      <word>
+        my : My mom is coming to visit.
+        <a href="https://youtu.be/-4y05j39isY?t=9">listen</a>
+      </word>
+      <br />
+      <br />
+
+      <word>
+        make : They wanted to forget their past and make a new start.
+        <a href="https://youtu.be/C-GrRIgdmW8?t=59">listen</a>
+      </word>
+      <br />
+      <br />
+
+      <word>
+        about : What is this movie about ?
+        <a href="https://youtu.be/JW8dqT90BLs?t=51">listen</a>
+      </word>
+      <br />
+      <br />
+
+      <word>
+        know : Actually, if you must know, Tony has been better.
+        <a href="https://youtu.be/Yzoj18RNxlQ">listen</a>
+      </word>
+      <br />
+      <br />
+
+      <word>
+        will : But each weapon will give you points at a different rate.
+        <a href="https://youtu.be/Ij1o5zGDCeE?t=46">listen</a>
+      </word>
+      <br />
+      <br />
+
+      <word>
+        up : He carried a sailor up three decks of a burning ship.
+        <a href="https://youtu.be/2Oe6HUgrRlQ?t=320">listen</a>
+      </word>
+      <br />
+      <br />
+
+      <word>
+        one : The classical eye makeup technique typically uses shades of one
+        color.
+        <a href="https://youtu.be/C-GrRIgdmW8">listen</a>
+      </word>
+      <br />
+      <br />
+
+      <word>
+        time : It is a pity that the visit time is too short.
+        <a href="https://youtu.be/-4y05j39isY?t=58">listen</a>
+      </word>
+      <br />
+      <br />
+
+      <word>
+        there : Actually, there was very little water in it at all.
+        <a href="https://youtu.be/Ij1o5zGDCeE?t=70">listen</a>
+      </word>
+      <br />
+      <br />
+
+      <word>
+        year : This depression typically develops in the first year after giving
+        birth.
+        <a href="https://youtu.be/o1Z4F4e2Bw4?t=396">listen</a>
+      </word>
+      <br />
+      <br />
+
+      <word>
+        so : It's a new hotel, so everything is still shiny.
+        <a href="https://youtu.be/C-GrRIgdmW8?t=4">listen</a>
+      </word>
+      <br />
+      <br />
+
+      <word>
+        think : Look at five different things and think about each of them.
+        <a href="https://youtu.be/JW8dqT90BLs?t=64">listen</a>
+      </word>
+      <br />
+      <br />
+
+      <word>
+        when : It is not yet clear when the salaries will be increased.
+        <a href="https://youtu.be/P-lBlZ3hqKc?t=657">listen</a>
+      </word>
+      <br />
+      <br />
+
+      <word>
+        which : You must choose which method is best for your production system.
+        <a href="https://youtu.be/9VF7kffCgJU?t=134">listen</a>
+      </word>
+      <br />
+      <br />
+
+      <word>
+        them : Training is a gift for them and they take it seriously.
+        <a href="https://youtu.be/td7Dcsco-WY?t=524">listen</a>
+      </word>
+      <br />
+      <br />
     </p>
   </body>
 </html>
